2005-11-02  Joerg Wunsch <j@uriah.heep.sax.de>

	* config.h: change YYSTYPE to be a single word, to work around
	a bug in Solaris' yacc.

2005-11-01  Joerg Wunsch <j@uriah.heep.sax.de>

	Make avrdude Solaris-compatible.
	* Makefile.am: distclean avrdude.conf.
	* avrdude.conf.in: make the parallel-port programmers optional.
	* bitbang.c: move the bitbang features out into PROGRAMMER.
	* configure.ac: introduce --enable-parport, add Solaris.
	* lexer.l: replace str by strng to work around problems in some
	versions of flex.
	* main.c: move getexitspecs into the respective programmer's
	domain; replace rindex by the C-standard strrchr.
	* par.c: make parallel port optional.
	* par.h: everything but par_initpgm() is private now.
	* pgm.h: add setping/getping/highpulsepin/getexitspecs.
	* serbb_posix.c: generalize bitbang interface; replace
	cfmakeraw() by explicit code.
	* serbb_win32.c: generalize bitbang interface.

2005-10-20  Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: fix yet another sign extension bug.

2005-10-14  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega8515): fix size of calibration
	memory.

2005-10-09  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: add support for ATmega640/1280/1281.
	* avrdude.1: document the above.
	* doc/avrdude.texi: (Ditto.)

2005-09-27  Joerg Wunsch <j@uriah.heep.sax.de>

	* doc/avrdude.texi: Polish up the docs a bit.  Use smallexample
	instead of example for wide tty output.  Document a trick to
	find out about the serial numbers of all JTAG ICEs attached
	to USB.

2005-09-26  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_paged_write): default the page size early so the
	buffer will be allocated correctly.
	* usb_libusb.c: fix libusb handling; now it works with libusb-win32 as
	well.

2005-09-21  Joerg Wunsch <j@uriah.heep.sax.de>

	* main.c(do_op): use mem->desc in place of upd->memtype to
	give the full name of the respective memory area, instead of